--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "eml-nl"
 version = "0.1.0"
 edition = "2024"
 license = "EUPL-1.2"
-rust-version = "1.91"
+rust-version = "1.91" # MSRV
 
 [dependencies]
-thiserror = "2.0.17"
-quick-xml = "0.38.4"
-tracing = "0.1.41"
+thiserror = "2.0"
+quick-xml = "0.38.2"
+tracing = "0.1.38"
