--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ thiserror = "2.0"
 quick-xml = "0.38.2"
 tracing = "0.1.38"
 chrono = "0.4.42"
+regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
