--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,23 @@ edition = "2024"
 license = "EUPL-1.2"
 rust-version = "1.91" # MSRV
 
+[features]
+default = []
+bin-tools = ["dep:clap", "dep:anyhow", "dep:tokio", "dep:tracing-subscriber", "dep:sha2"]
+
+[[bin]]
+name = "eml-validator"
+path = "bin/eml-validator.rs"
+required-features = ["bin-tools"]
+
 [dependencies]
 thiserror = "2.0"
 quick-xml = "0.38.2"
 tracing = "0.1.38"
 chrono = "0.4.42"
 regex = { version = "1.12.2", default-features = false, features = ["std", "unicode-perl"] }
+clap = { version = "4.5.54", optional = true, features = ["derive"] }
+anyhow = { version = "1.0.100", optional = true }
+tokio = { version = "1.49.0", optional = true, features = ["full"] }
+tracing-subscriber = { version = "0.3.22", optional = true, features = ["fmt", "env-filter"] }
+sha2 = { version = "0.10.9", optional = true }
